--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,16 @@
             >
 
         </activity>
+        <activity
+            android:name=".AboutActivity"
+            >
+
+        </activity>
+        <activity
+            android:name=".SettingsActivity"
+            >
+
+        </activity>
     </application>
 
 </manifest>
